--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="announcement">
 				服装数据来自<span id="wardrobeversion">jillhx@QQ群 20151106</span>, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 1.5.2<br/>
-				联盟技能数据来自奇迹暖暖玉人@微博 20151006<br/>
+				关卡技能数据来自兔子&猫猫@QQ群 20151119, 联盟技能数据来自奇迹暖暖玉人@微博 20151006<br/>
 				<br/>
 				<a href="#" id="show_history">历史更新</a>
 				<div id="update_history">
@@ -90,6 +90,7 @@
 					11.16: 修复一键攻略饰品排序错误, 缓慢调整界面样式中<br/>
 					11.16: 添加手动高分权重功能, 暂不支持一键攻略; 去掉按钮颜色(果然没有艺术细胞... <br/>
 					11.19: 高分权重功能添加分数排序提示, 调整购物车总分位置, 购物车自动计算连衣裙/上下装 <br/>
+					11.19: 更新全关卡的技能数据, 感谢兔子和猫猫的整理 <br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
