--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="announcement">
 				服装数据来自<span id="wardrobeversion">jillhx@QQ群 20151106</span>, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 1.5.2<br/>
-				关卡技能数据来自兔子&猫猫@QQ群 20151119, 联盟技能数据来自奇迹暖暖玉人@微博 20151006<br/>
+				关卡技能数据来自morei猫猫&兔子@QQ群 20151119, 联盟技能数据来自奇迹暖暖玉人@微博 20151006<br/>
 				<br/>
 				<a href="#" id="show_history">历史更新</a>
 				<div id="update_history">
@@ -86,9 +86,9 @@
 					1106update2: 修复错误衣柜数据, 如果仍有问题及时反馈~<br/>	  
 					1106update3: 修改藤萝链为手饰*左, 做攻略的各位注意下(暖暖终于改回来了, 本次更新"万圣巫师帽·绮夜"的id有调整, 之前添加过的需要重新添加<br/>	  
 					11.09: 缓慢调整界面样式中<br/>
-					</div><br/>
 					11.16: 修复一键攻略饰品排序错误, 缓慢调整界面样式中<br/>
 					11.16: 添加手动高分权重功能, 暂不支持一键攻略; 去掉按钮颜色(果然没有艺术细胞... <br/>
+					</div><br/>
 					11.19: 高分权重功能添加分数排序提示, 调整购物车总分位置, 购物车自动计算连衣裙/上下装 <br/>
 					11.19: 更新全关卡的技能数据, 感谢兔子和猫猫的整理 <br/>
 					<br/>
