--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
 					11.09: 缓慢调整界面样式中<br/>
 					11.16: 修复一键攻略饰品排序错误, 缓慢调整界面样式中<br/>
 					11.16: 添加手动高分权重功能, 暂不支持一键攻略; 去掉按钮颜色(果然没有艺术细胞... <br/>
-					</div><br/>
 					11.19: 高分权重功能添加分数排序提示, 调整购物车总分位置, 购物车自动计算连衣裙/上下装 <br/>
 					11.19: 更新全关卡的技能数据, 感谢兔子和猫猫的整理 <br/>
+					</div><br/>
+					11.25: 版本更新 <br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
