--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
 					11.16: 添加手动高分权重功能, 暂不支持一键攻略; 去掉按钮颜色(果然没有艺术细胞... <br/>
 					11.19: 高分权重功能添加分数排序提示, 调整购物车总分位置, 购物车自动计算连衣裙/上下装 <br/>
 					11.19: 更新全关卡的技能数据, 感谢兔子和猫猫的整理 <br/>
-					</div><br/>
 					11.25: 版本更新 <br/>
 					11.26: 版本更新 <br/>
+					</div><br/>
+					12.3: 更新火炮兰套装, 花蔓套装, 内衣套装; 更新联盟权重; 调整: 盛宴之梦&假面盛宴·梦<br/>
+					最近三次元事情比较繁忙, 可能更新的不会很及时<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
