update skill, hint

--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
 		<div class='title'>
 			奇迹暖暖在线配装器 by:黑的升华<br/>
 			对配装器有什么建议可以到<a href="http://weibo.com/u/3597140883">@黑的升华</a>或者<a href="http://tieba.baidu.com/p/4131330280">贴吧</a>汇报~<br/>
-			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151021修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a><br/>
-			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151021修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a><br/>
-			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151021修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a>，重要的事情说三遍<br/>
+			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151201修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a><br/>
+			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151201修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a><br/>
+			<font style="color:red">本配装器是基于意念挖坟的ip君@ivangift's github 20151201修改, 需要准确数据的可以使用</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版</a>，重要的事情说三遍<br/>
 			<div id="share-link"></div>
 		</div>
 		<div id="StrategyInfo"></div>
 		<div class='top'>
 			<div class="announcement">
-				服装数据来自<span id="wardrobeversion">jillhx@QQ群 20151106</span>, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
+				服装数据来自<span id="wardrobeversion">jillhx@QQ群 20151201</span>, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 1.5.2<br/>
-				关卡技能数据来自morei猫猫&兔子@QQ群 20151119, 联盟技能数据来自奇迹暖暖玉人@微博 20151006<br/>
+				关卡, 联盟技能数据来自morei猫猫&兔子@QQ群 20151203<br/>
+				关卡过关提示来自morei猫猫&兔子@QQ群 20151122<br/>
 				<br/>
 				<a href="#" id="show_history">历史更新</a>
 				<div id="update_history">
@@ -94,6 +95,7 @@
 					11.26: 版本更新 <br/>
 					</div><br/>
 					12.3: 更新火炮兰套装, 花蔓套装, 内衣套装; 更新联盟权重; 调整: 盛宴之梦&假面盛宴·梦<br/>
+					12.3: 更新所有关卡的过关提示, 更新所有联盟委托技能, 感谢morei猫猫&兔子的整理和提供 (耽搁了好久的某黑逃<br/>
 					最近三次元事情比较繁忙, 可能更新的不会很及时<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
