--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 					</div><br/>
 					12.3: 更新火炮兰套装, 花蔓套装, 内衣套装; 更新联盟权重; 调整: 盛宴之梦&假面盛宴·梦<br/>
 					12.3: 更新所有关卡的过关提示, 更新所有联盟委托技能, 感谢morei猫猫&兔子的整理和提供 (耽搁了好久的某黑逃<br/>
+					12.6: 更新炮火如兰, 云谣, 生日套装<br/>
 					最近三次元事情比较繁忙, 可能更新的不会很及时<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
