--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					12.3: 更新所有关卡的过关提示, 更新所有联盟委托技能, 感谢morei猫猫&兔子的整理和提供 (耽搁了好久的某黑逃<br/>
 					</div><br/>
 					12.6: 更新炮火如兰, 云谣, 生日套装<br/>
-					12.8: 缓慢更新新版本中<br/>
+					12.8: 更新满天繁星套装, 添加部位:饰品-特殊*耳朵, 调整部位:足下>>背景, 背景>>前景, 挎包>>肩部<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
