--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
 					11.26: 版本更新 <br/>
 					12.3: 更新火炮兰套装, 花蔓套装, 内衣套装; 更新联盟权重; 调整: 盛宴之梦&假面盛宴·梦<br/>
 					12.3: 更新所有关卡的过关提示, 更新所有联盟委托技能, 感谢morei猫猫&兔子的整理和提供 (耽搁了好久的某黑逃<br/>
-					</div><br/>
 					12.6: 更新炮火如兰, 云谣, 生日套装<br/>
+					</div><br/>
 					12.8: 更新满天繁星套装, 添加部位:饰品-特殊*耳朵, 调整部位:足下>>背景, 背景>>前景, 挎包>>肩部<br/>
+					12.10: 更新4件签到衣服, 活动关卡每天上午更新, 不特地说明了<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
