--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 					</div><br/>
 					12.8: 更新满天繁星套装, 添加部位:饰品-特殊*耳朵, 调整部位:足下>>背景, 背景>>前景, 挎包>>肩部<br/>
 					12.10: 更新4件签到衣服, 活动关卡每天上午更新, 不特地说明了<br/>
+					12.14: 更新烟云锦, 今天是活动最后一天, 大家记得刷完自己想要的部件~<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
