--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 					12.8: 更新满天繁星套装, 添加部位:饰品-特殊*耳朵, 调整部位:足下>>背景, 背景>>前景, 挎包>>肩部<br/>
 					12.10: 更新4件签到衣服, 活动关卡每天上午更新, 不特地说明了<br/>
 					12.14: 更新烟云锦, 今天是活动最后一天, 大家记得刷完自己想要的部件~<br/>
+					12.16: 添加F品/非F品一句话提示(仅功能添加, 数据未实装<br/>
 					<br/>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
@@ -113,6 +114,7 @@
 					<select id="theme" onChange="changeTheme()"></select><button id="onekey" class="btn btn-default">一键攻略</button>
 					<div id="tagInfo"></div>
 					<div id="skillInfo"></div>
+					<div id="categoryFInfo"></div>
 					<div id="hintInfo"></div>
 				</div>
 				<div class="fliter_form_div">
