--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>奇迹暖暖在线配装器</title>
