--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 					12.18: 更新罂粟千狐, 圣诞设计图部件, 一元购部件<br/>
 					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, 有希望补充数据的可以联系<a href="http://weibo.com/u/5674185517">@兔子_zcthebunny</a><br/>
 					<br/>
+					<div><a href="#" id="jksma" onclick="$('#jksmdiv').show();$('#jksma').hide()">近况说明</a></div>
+					<div id="jksmdiv" style="display:none">
+					最近因为三次元事情繁忙和沉迷其他游戏, 更新和回复速度不快, 这里跟大家简单说明一下近况~<br/>
+					关于功能更新: 手机适配版和衣柜分享功能完成度基本都在50%左右, 因各种问题搁置中, 预计会在1月1日后继续开发, 原材料计算功能因为自己暂时用不到, 会在下一件有生之年公布时突击完成掉 <br/>
+					关于微博: 因为新浪微博把我的微博账号判断为广告号了, 所以不能发新微博和转发, 不过评论和回复私信功能还是可以正常使用<br/>
+					关于关卡F情况: 目前根据收集的情况, 新出的衣服和活动衣服很容易造成大部分关卡F, 但此类衣服又分数较高, 造成大家感觉最近搭配器计算出的配装经常F<br/>
+					关于F品提示功能: 这部分的数据目前是由兔子和猫猫在维护, 因为数据量比较大, 收集也很麻烦, 所以只是先出了个临时的提示功能, 功能完善后会整合到配装器算分和展示里<br/><br/></div>
 					未(you)来(sheng)预(zhi)定(nian)功能: 手机适配版(doing), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing)<br/>
 			</div><!-- announcement -->	
 			<div class="fliter">
