--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					12.16: 添加F品/非F品一句话提示(仅功能添加, 数据未实装<br/>
 					</div><br/>
 					12.18: 更新罂粟千狐, 圣诞设计图部件, 一元购部件<br/>
-					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, 有希望补充数据的可以联系<a href="http://weibo.com/u/5674185517">@兔子_zcthebunny</a><br/>
+					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, 有希望补充数据的可以至<a href="http://weibo.com/5674185517/D96jch2ie">@兔子_zcthebunny</a>补充<br/>
 					12.18: 调整分类顺序, 将外套放在上下装之后, 袜子放在袜套前, 饰品按照游戏中进行排序<br/>
 					<div><a href="#" id="jksma" onclick="$('#jksmdiv').show();$('#jksma').hide()">近况说明</a></div>
 					<div id="jksmdiv" style="display:none">
