--- a/index.html
+++ b/index.html
@@ -239,5 +239,11 @@
 		<button onClick="loadCustomInventory()">恢复备份</button>
 		<br/>
 		<hr>
+		
+  
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
 	</body>
 </html>
