--- a/index.html
+++ b/index.html
@@ -239,5 +239,18 @@
 		<button onClick="loadCustomInventory()">恢复备份</button>
 		<br/>
 		<hr>
+		
+	<div class="ds-thread" data-thread-key="nikkiup2u3" data-title="nikkiup2u3_main" data-url="http://seal100x.github.io/nikkiup2u3/"></div>
+	<script type="text/javascript">
+	var duoshuoQuery = {short_name:"seal100x"};
+		(function() {
+			var ds = document.createElement('script');
+			ds.type = 'text/javascript';ds.async = true;
+			ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+			ds.charset = 'UTF-8';
+			(document.getElementsByTagName('head')[0] 
+			 || document.getElementsByTagName('body')[0]).appendChild(ds);
+		})();
+	</script>
 	</body>
 </html>
