--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 					12.18: 更新罂粟千狐, 圣诞设计图部件, 一元购部件<br/>
 					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, 有希望补充数据的可以至<a href="http://weibo.com/5674185517/D96jch2ie">@兔子_zcthebunny</a>补充<br/>
 					12.18: 调整分类顺序, 将外套放在上下装之后, 袜子放在袜套前, 饰品按照游戏中进行排序<br/>
+					12.20: 添加饰品id排序功能，使用方式：刷新页面后选择饰品分数排序, 默默的加了个评论功能<br/>
 					<div><a href="#" id="jksma" onclick="$('#jksmdiv').show();$('#jksma').hide()">近况说明</a></div>
 					<div id="jksmdiv" style="display:none">
 					最近因为三次元事情繁忙和沉迷其他游戏, 更新和回复速度不快, 这里跟大家简单说明一下近况~<br/>
@@ -205,10 +206,9 @@
 							<div class="checkbox"><label><input type="checkbox" class="fliter" value="toplevel" checked /> 顶配模式</label></div>
 							<span><a href="#" id="advanced_options">高级选项</a></span>
 							<span id="advanced_options_span">
-								<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 饰品分数排序</label></div>
+								<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 饰品分数/id排序</label></div>
 								<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
 								<div class="checkbox"><label><input type="checkbox" class="fliter" value="highscore" /> 高分权重(手动)</label></div>
-								<div class="checkbox"><label><input type="checkbox" class="fliter" value="clothes_num" disabled /> 衣柜数量记录</label></div>
 							</span>
 						</div>
 					</form>
