--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 		<br/>
 		<hr>
 		
-	<div class="ds-thread" data-thread-key="nikkiup2u3" data-title="nikkiup2u3_main" data-url="http://seal100x.github.io/nikkiup2u3/"></div>
+	<div class="ds-thread" data-thread-key="nikkiup2u3" data-title="奇迹暖暖在线配装器" data-url="http://seal100x.github.io/nikkiup2u3/"></div>
 	<script type="text/javascript">
 	var duoshuoQuery = {short_name:"seal100x"};
 		(function() {
