--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				设计图数据来自amy_翡翠@QQ群 1.5.2<br/>
 				关卡, 联盟技能数据来自morei猫猫&兔子@QQ群 20151203<br/>
 				关卡过关提示来自morei猫猫&兔子@QQ群 20151122<br/>
-				关卡F配件信息来自morei猫猫&兔子@QQ群 20151217, F品信息补充请至<a href="http://weibo.com/5674185517/D96jch2ie">@兔子_zcthebunny</a>汇报<br/>
+				关卡F配件信息来自morei猫猫&兔子@QQ群 20151217, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">F品收集帖</a>汇报<br/>
 				<br/>
 				<a href="#" id="show_history">历史更新</a>
 				<div id="update_history">
@@ -104,7 +104,7 @@
 					12.16: 添加F品/非F品一句话提示(仅功能添加, 数据未实装<br/>
 					</div><br/>
 					12.18: 更新罂粟千狐, 圣诞设计图部件, 一元购部件<br/>
-					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, 有希望补充数据的可以至<a href="http://weibo.com/5674185517/D96jch2ie">@兔子_zcthebunny</a>补充<br/>
+					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">F品收集帖</a>汇报<br/>
 					12.18: 调整分类顺序, 将外套放在上下装之后, 袜子放在袜套前, 饰品按照游戏中进行排序<br/>
 					12.20: 添加饰品id排序功能，使用方式：刷新页面后选择饰品分数排序, 默默的加了个评论功能<br/>
 					<div><a href="#" id="jksma" onclick="$('#jksmdiv').show();$('#jksma').hide()">近况说明</a></div>
