--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 				</div>
 					12.20: 添加饰品id排序功能，使用方式：刷新页面后选择饰品分数排序, 默默的加了个评论功能<br/>
 					12.22: 更新设计图数据为翡翠@QQ群 V1.6.3, 为未来原材料计算功能调整材料列表格式<br/>
+					12.23: 更新圣诞套, 新增分类'饰品-特殊*发卡'(临时命名, 有第二件时调整分类名称)<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				更新预告: 手机适配版(test), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo)<br/>
