--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@
 					12.18: 更新罂粟千狐, 圣诞设计图部件, 一元购部件<br/>
 					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">F品收集帖</a>汇报<br/>
 					12.18: 调整分类顺序, 将外套放在上下装之后, 袜子放在袜套前, 饰品按照游戏中进行排序<br/>
+					12.20: 添加饰品id排序功能，使用方式：刷新页面后选择饰品分数排序, 默默的加了个评论功能<br/>
 					<br/>
 				</div>
-					12.20: 添加饰品id排序功能，使用方式：刷新页面后选择饰品分数排序, 默默的加了个评论功能<br/>
 					12.22: 更新设计图数据为翡翠@QQ群 V1.6.3, 为未来原材料计算功能调整材料列表格式<br/>
 					12.23: 更新圣诞套, 新增分类'饰品-特殊*发卡'(临时命名, 有第二件时调整分类名称)<br/>
+					12.23: 添加原材料计算功能, 鼠标悬浮后会显示所需的原材料, 自动计算原材料总数还没有完成, 下版本更新<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
-				更新预告: 手机适配版(test), 原材料计算(doing), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo)<br/>
+				更新预告: 手机适配版(test), 原材料计算(v1), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo)<br/>
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
