悬浮窗效果调整会和手机适配版同时发布

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				</div>
 					12.22: 更新设计图数据为翡翠@QQ群 V1.6.3, 为未来原材料计算功能调整材料列表格式<br/>
 					12.23: 更新圣诞套, 新增分类'饰品-特殊*发卡'(临时命名, 有第二件时调整分类名称)<br/>
-					12.23: 添加原材料计算功能v2, 鼠标悬浮后会显示所需的原材料数量, 自动计算原材料总数, 可能最终数据有些错误, 欢迎报错<br/>
+					12.23: 添加原材料计算功能v2, 鼠标悬浮后会显示所需的原材料数量, 自动计算原材料总数, 可能最终数据有些错误, 欢迎报错, 悬浮窗效果调整会和手机适配版同时发布<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
 				更新预告: 手机适配版(test), 原材料计算(v2), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo)<br/>
