--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 		<div id="StrategyInfo"></div>
 		<div class='top'>
 			<div class="announcement">
-				服装数据来自jillhx@QQ群 20151201, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
+				服装数据来自jillhx@QQ群 20151223, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">贴吧</a>汇报<br/>
 				设计图数据来自amy_翡翠@QQ群 V1.6.3<br/>
 				关卡, 联盟技能数据来自morei猫猫&兔子@QQ群 20151203<br/>
-				关卡过关提示来自morei猫猫&兔子@QQ群 20151122<br/>
-				关卡F配件信息来自morei猫猫&兔子@QQ群 20151217, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">贴吧</a>或<a href="http://weibo.com/5674185517/D9pJb9iSF">微博</a>汇报<br/>
+				关卡过关提示, F配件数据来自morei猫猫&兔子@QQ群 20151223, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">贴吧</a>或<a href="http://weibo.com/5674185517/D9pJb9iSF">微博</a>汇报<br/>
 				<br/>
 				<div id="update_history">
 					0902update: 己做了一版0902服装的, 在ip君更新前临时使用=w=<br/>
@@ -105,14 +104,15 @@
 					12.18: 更新全关卡部分F配件信息, 感谢兔子和猫猫的整理, F品信息补充请至<a href="http://tieba.baidu.com/p/4223816101">F品收集帖</a>汇报<br/>
 					12.18: 调整分类顺序, 将外套放在上下装之后, 袜子放在袜套前, 饰品按照游戏中进行排序<br/>
 					12.20: 添加饰品id排序功能，使用方式：刷新页面后选择饰品分数排序, 默默的加了个评论功能<br/>
+					12.22: 更新设计图数据为翡翠@QQ群 V1.6.3, 为未来原材料计算功能调整材料列表格式<br/>
 					<br/>
 				</div>
-					12.22: 更新设计图数据为翡翠@QQ群 V1.6.3, 为未来原材料计算功能调整材料列表格式<br/>
 					12.23: 更新圣诞套, 新增分类'饰品-特殊*发卡'(临时命名, 有第二件时调整分类名称)<br/>
 					12.23: 添加原材料计算功能v2, 鼠标悬浮后会显示所需的原材料数量, 自动计算原材料总数, 可能最终数据有些错误, 欢迎报错, 悬浮窗效果调整会和手机适配版同时发布<br/>
+					12.23: 更新关卡过关提示, F配件数据<br/>
 				<a href="#" id="show_history">历史更新</a><br/>
 				<br/>
-				更新预告: 手机适配版(test), 原材料计算(v2), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo)<br/>
+				更新预告: 手机适配版(test), 原材料计算(v2), 筛选功能(todo), 衣柜分享(doing), F品信息整合(todo), 快速添加衣柜(plan)<br/>
 			</div><!-- announcement -->	
 			<div class="fliter">
 				距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
